--- a/Savaari_Rider/app/src/main/res/values/strings.xml
+++ b/Savaari_Rider/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
 
     <!-- TASK ACTIVITY -->
 
-    <string name="navYourTrips">Your Trips</string>
+    <string name="navYourTrips">Your trips</string>
     <string name="navHelp">Help</string>
     <string name="navWallet">Wallet</string>
     <string name="navSettings">Settings</string>
@@ -107,6 +107,17 @@
     <string name="no_more_tasks">Relax! No pending tasks</string>
 
 
+    <!-- BOOK A RIDE SECTION -->
+    <string name = "add_source">Add pickup point</string>
+    <string name = "add_dest">Add destination</string>
+    <string name = "add_stop">Add stop</string>
+    <string name = "search_ride">GO</string>
+    <string name = "searching_ride">Finding  a driver for you</string>
+    <string name = "select_ride_type">Select a ride type</string>
+
+    <string name = "select_payment_method">Select a payment method</string>
+
+
     <!-- ==================Settings Section ============== -->
 
     <!-- Theme Setting-->
@@ -124,31 +135,9 @@
     <string name="blue_theme">Blue Theme</string>
     <string name="dark_red_theme">ToDo Original (Dark)</string>
     <string name="dark_blue_theme">Dark Blue Theme</string>
-    <string name="sign_up_failure">Sign Up Failed!</string>
-    <string name="active">ACTIVE</string>
-    <string name="app_title_2">for driver</string>
-    <string name="start_ride">START RIDE</string>
-    <string name="confirmRideEnd">END RIDE</string>
-    <string name="driver_status">Your Offline</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
-    <string name="phone_number">Phone Number</string>
-    <string name="date_of_birth">Date of Birth</string>
-    <string name="vehicle_registration">Vehicle Registration</string>
-    <string name="previous_form">Previous</string>
-    <string name="next_form">Next</string>
-    <string name="register_driver">Register Driver</string>
-    <string name="request_sent">Request Sent</string>
-    <string name="make">Make</string>
-    <string name="vehicle_model">Vehicle Model</string>
-    <string name="vehicle_year">Year</string>
-    <string name="number_plate">Number Plate</string>
-    <string name="vehicle_color">Color</string>
-    <string name="register_vehicle">Register Vehicle</string>
-    <string name="select_vehicle">SELECT VEHICLE</string>
-    <string name="your_vehicles">Your Vehicles</string>
-    <string name="your_documents">Your Documents</string>
-    <string name="cnic">CNIC</string>
-    <string name="license_number">License Number</string>
     <string name="submit">Submit</string>
+    <string name="you_have_arrived">You have arrived</string>
+    <string name="thank_you_ride">Thanks for riding with us</string>
+
+
 </resources>
