Rider: Report A Problem Implementation
- UI Card for Report a Problem Panel
- Report A Problem workflow & interface with server

--- a/Savaari_Rider/app/src/main/res/values/strings.xml
+++ b/Savaari_Rider/app/src/main/res/values/strings.xml
@@ -115,6 +115,11 @@
 
     <string name="select_payment_method">Select a payment method</string>
 
+    <!-- RIDE LOG & REPORT A PROBLEM -->
+    <string name="report_problem">Report A Problem</string>
+    <string name="describe_problem">Describe your problem</string>
+    <string name="cancel">Cancel</string>
+
 
     <!-- ==================Settings Section ============== -->
 
