--- a/Savaari_Rider/app/src/main/res/values/strings.xml
+++ b/Savaari_Rider/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="submit">Submit</string>
     <string name="you_have_arrived">You have arrived</string>
     <string name="thank_you_ride">Thanks for riding with us</string>
+    <string name="select_problem_category">Select Problem Category</string>
 
 
 </resources>
